syntax = "proto3";

import "common/api/src/common.proto";

package computation_group;

service ComputationGroup {
    // Submit a batch to a worker in the same computation group.
    rpc SubmitBatch (SubmitBatchRequest) returns (SubmitBatchResponse) {}
}

message SubmitBatchRequest {
    bytes batch_hash = 1;
    common.Signature signature = 2;
}

message SubmitBatchResponse {
}
